Add move counter

--- a/Index.html
+++ b/Index.html
@@ -18,12 +18,13 @@
                     <option value="2">Medium</option>
                     <option value="3">Hard</option>
                 </select>
-                <button id="play-btn">Play</button>
+                <button id="play-btn">Play/Reset</button>
             </div>
         </div>
     </div>
 
     <div class="container">
+        <h2 id="counter">Mossa n° 0</h2>
         <div class="row">
             <h2>Seleziona il livello di difficoltà e clicca Play</h2>
             <!-- <div class="square-easy">1</div> -->
